external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_feature_gated_signatures.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:8:12
  │
8 │         x: i32,
  │            ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:9:12
  │
9 │         y: i64,
  │            ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:10:12
   │
10 │         z: i256,
   │            ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:13:20
   │
13 │     fun params(_a: i8, _b: i128): i64 {
   │                    ^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:13:28
   │
13 │     fun params(_a: i8, _b: i128): i64 {
   │                            ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:13:35
   │
13 │     fun params(_a: i8, _b: i128): i64 {
   │                                   ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:17:21
   │
17 │     const MY_CONST: i32 = 0;
   │                     ^^^ signed integer types are under development and should not be used right now.

error[E04012]: invalid type for constant
   ┌─ tests/move_2024/typing/signed_int_feature_gated_signatures.move:17:21
   │
17 │     const MY_CONST: i32 = 0;
   │                     ^^^
   │                     │
   │                     Unpermitted constant type
   │                     Found: 'i32'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'bool', 'address', 'vector<_>'
